# tm

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/mysql/: Dockerfile
docker/mysql/conf.d/: my.ini
docker/nginx/: Dockerfile
docker/nginx/templates/: default.conf.template
scripts/: dotenv
src/: .unibeautifyrc.yml  Dockerfile  pyproject.toml  setup.cfg
src/accounts/: admin.py  forms.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_auto_20210319_2341.py
src/blog/: forms.py  models.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py  0002_auto_20210320_2235.py
src/myproject/: settings.py  urls.py
src/projects/: forms.py  models.py  urls.py  views.py
src/projects/migrations/: 0001_initial.py
src/tasks/: admin.py  forms.py  models.py  urls.py  views.py
src/tasks/migrations/: 0001_initial.py  0002_task_owner.py  0002_task_priority.py  0003_task_project.py  0004_task_parent.py
src/tasks/templatetags/: task_tags.py
src/templates/: base.html  constructing.html  index.html
src/templates/accounts/: index.html  signin.html  signup.html
src/templates/blog/: confirm_delete.html  detail.html  edit.html  index.html  new.html
src/templates/components/: nav.html
src/templates/projects/: confirm_delete.html  detail.html  edit.html  (+2 more)
src/tm/: settings.py
src/users/: admin.py
tasks/: admin.py  models.py
terraform/: data.tf  main.tf  variables.tf
terraform/templates/: container_definitions.json
tm/: settings.py  urls.py
users/: models.py
users/migrations/: 0001_initial.py
(+26 files in other folders)
