[tool.poetry]
name = "task"
version = "0.1.0"
description = ""
authors = ["Cry999 <when.the.cry999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.1.7"
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
